<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">星 球</string>
    <string name="login_send">发送</string>
    <string name="login_vercode">验证码</string>
    <string name="login_phone_number">手机号码</string>
    <string name="text_upload_photo_loding">上传图片</string>
    <string name="text_upload_title">完善资料</string>
    <string name="text_add_friend_contact">从通讯录中导入</string>
    <string name="text_login_phone">电话号码</string>
    <string name="text_login_phone_null">电话号码不能为空</string>
    <string name="text_add_friend_no_me">不能查询本人</string>
    <string name="text_add_friend_content">推荐好友</string>
    <string name="text_add_friend_title">搜索结果</string>
    <string name="text_user_add_friend">添加好友</string>
    <string name="text_search_age">岁</string>
    <string name="text_user_chat">聊天</string>
    <string name="text_user_audio_chat">语音通话</string>
    <string name="text_user_video_chat">视频通话</string>
    <string name="dialog_add_firend_title">添加好友</string>
    <string name="dialog_add_firend_msg">验证信息</string>
    <string name="dialog_add_firend_cancel">取消</string>
    <string name="dialog_add_firend_add">添加</string>
    <string name="text_me_info_sex">性别</string>
    <string name="text_me_info_age">年龄</string>
    <string name="text_me_info_birthday">生日</string>
    <string name="text_me_info_constellation">星座</string>
    <string name="text_me_info_hobby">爱好</string>
    <string name="text_me_info_status">状态</string>
    <string name="text_me_info_boy">男</string>
    <string name="text_me_info_girl">女</string>
    <string name="text_me_info_tips">你好，我是</string>
    <string name="text_user_info">用户信息</string>
    <string name="text_square_hint_text">记录这一刻...</string>
    <string name="text_main_square">广 场</string>
    <string name="text_iv_pre_downloading">正在下载...</string>
    <string name="text_iv_pre_save_fail">保存失败</string>
    <string name="text_push_ing">正在发布...</string>
    <string name="text_push_type_img">图片</string>
    <string name="text_push_type_music">音乐</string>
    <string name="text_push_type_video">视频</string>
    <string name="menu_input_text">发表</string>
    <string name="menu_info_save_text">保存</string>
    <string name="text_push_ed_null">请输入内容</string>
    <string name="text_push_fail">发布失败</string>
    <string name="text_square_psuh">发布动态</string>
    <string name="text_server_status_text_1">在线</string>
    <string name="text_server_status_text_2">连接中...</string>
    <string name="text_server_status_text_3">离线</string>
    <string name="text_server_status_text_4">网络不可用</string>
    <string name="text_server_status_text_5">服务器异常</string>
    <string name="text_server_status_text_6">Token错误</string>
    <string name="text_me_info_name">昵称</string>
    <string name="text_me_info_desc">签名</string>
    <string name="text_dialog_cancel">返回</string>
    <string name="text_me_info_update">正在更新...</string>
    <string name="text_update_nickname_null">昵称不能为空</string>
    <string name="text_me_item_title_1">个人信息</string>
    <string name="text_new_friend_agree">已同意</string>
    <string name="text_new_friend_no_agree">已拒绝</string>
    <string name="text_me_item_title_3">新朋友</string>
    <string name="text_private_set_open_ing">正在打开...</string>
    <string name="text_private_set_succeess">打开成功</string>
    <string name="text_private_set_close_ing">正在关闭...</string>
    <string name="text_private_set_fail">关闭成功</string>
    <string name="text_private_setting_title">隐私模式</string>
    <string name="text_private_setting_content">开启后不能从通讯中找到我</string>
    <string name="text_me_item_title_4">隐私设置</string>
    <string name="text_share_download">保存到相册</string>
    <string name="text_shar_save_ing">保存中...</string>
    <string name="text_me_item_title_5">分享星球</string>
    <string name="text_me_item_title_6">关于星球</string>
    <string name="AppVersion">Version 1.1.0</string>
    <string name="text_setting_systemui_tips">通知栏提醒</string>
    <string name="text_setting_clear_cache">清理缓存</string>
    <string name="text_setting_update_languaue">切换语言</string>
    <string name="text_setting_check_permissions">检查权限</string>
    <string name="text_setting_logout">退出登录</string>
    <string name="text_setting_en">English</string>
    <string name="text_setting_zh">中文</string>
    <string name="text_me_item_title_7">设置</string>
    <string name="text_chat_tab_title_1">消息</string>
    <string name="text_chat_tab_title_2">通话</string>
    <string name="text_chat_tab_title_3">好友</string>
    <string name="text_all_friend_desc">签名：</string>
    <string name="text_chat_record_audio">语音</string>
    <string name="text_chat_record_video">视频</string>
    <string name="text_call_record_un_answer">未接来电</string>
    <string name="text_chat_record_dial">本机呼出</string>
    <string name="text_chat_record_answer">已接来电</string>
    <string name="text_chat_record_img">图片</string>
    <string name="text_chat_record_location">位置</string>
    <string name="text_login_send">发送</string>
    <string name="text_location_search">正在搜索...</string>
    <string name="text_location">位置</string>
    <string name="text_chat_info_del_error">删除失败</string>
    <string name="text_chat_info_del_text">确认删除该好友？</string>
    <string name="text_delete">删除好友</string>
    <string name="text_pair_null">暂无匹配对象</string>
    <string name="text_pair_random">匹配中...</string>
    <string name="text_star_par_tips_1">请先完善个人信息-星座</string>
    <string name="text_star_par_tips_2">请先完善个人信息-年龄</string>
    <string name="text_star_par_tips_3">请先完善个人信息-爱好</string>
    <string name="text_star_par_tips_4">请先完善个人信息-状态</string>
    <string name="text_star_pserver_fail">服务器连接失败</string>
    <string name="text_service_calling">语音来电</string>
    <string name="text_service_call_ing">正在呼叫...</string>
    <string name="text_service_video_calling">视频来电</string>
    <string name="text_service_call_video_ing">视频电话呼叫中...</string>
    <string name="text_server_noti_send_text">请求添加好友</string>
    <string name="text_server_noti_receiver_text">同意添加好友</string>
    <string name="text_dialog_ablum">从相册中选择</string>
    <string name="text_main_exit">再按一次退出</string>

    <string-array name="ConstellatioArray">
        <item>白羊座</item>
        <item>金牛座</item>
        <item>双子座</item>
        <item>巨蟹座</item>
        <item>狮子座</item>
        <item>处女座</item>
        <item>天秤座</item>
        <item>天蝎座</item>
        <item>射手座</item>
        <item>摩羯座</item>
        <item>水瓶座</item>
        <item>双鱼座</item>
    </string-array>

    <string-array name="StatusArray">
        <item>已婚</item>
        <item>单身</item>
        <item>热恋</item>
        <item>单恋</item>
    </string-array>

    <string-array name="HobbyArray">
        <item>运动</item>
        <item>音乐</item>
        <item>电影</item>
        <item>绘画</item>
        <item>小说</item>
        <item>冒险</item>
        <item>拼图</item>
        <item>收藏</item>
        <item>游戏</item>
        <item>发呆</item>
        <item>卖萌</item>
        <item>网恋</item>
    </string-array>
</resources>