<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:alpha="0.95"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_boy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/text_me_info_boy"
        android:textColor="@color/white_60" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="@color/purple_200" />

    <TextView
        android:id="@+id/tv_girl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/text_me_info_girl"
        android:textColor="@color/white_60" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="@color/purple_200" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/text_dialog_cancel"
        android:textColor="@color/white_87" />

</LinearLayout>