<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_app_tips"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#0DFFFFFF"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_setting_systemui_tips"
            android:textColor="@color/white"
            android:alpha="0.6" />

        <Switch
            android:id="@+id/sw_app_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:thumbTint="@color/white"
            android:trackTint="#d3d3d3"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_chat_theme"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#0DFFFFFF"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="聊天背景"
            android:textColor="@color/white"
            android:alpha="0.6"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#0DFFFFFF"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_setting_clear_cache"
            android:textColor="@color/white"
            android:alpha="0.6"/>

        <TextView
            android:id="@+id/tv_cache_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:alpha="0.37"
            android:text="0 MB" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_update_languaue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#0DFFFFFF"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_setting_update_languaue"
                android:textColor="@color/white"
                android:alpha="0.6" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:alpha="0.37"
                android:text="更换语言将重启App"
                android:textSize="12dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_current_languaue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:alpha="0.37"
            android:text="中文" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_check_permissions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#0DFFFFFF"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_setting_check_permissions"
            android:textColor="@color/white"
            android:alpha="0.6" />

    </RelativeLayout>


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/corner_login"
        android:text="@string/text_setting_logout"
        android:textColor="@color/white_87" />


</LinearLayout>