<?xml version="1.0" encoding="utf-8"?>
<com.tangyibo.framework.view.HeadZoomScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black" />

            <RelativeLayout
                android:id="@+id/ll_back"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:paddingLeft="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_left_arrow" />

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:alpha="0.6"
                android:textSize="24sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:alpha="0.6"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mUserInfoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_add_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/corner_login"
            android:text="@string/text_user_add_friend"
            android:textColor="@color/white"
            android:alpha="0.6" />

        <LinearLayout
            android:id="@+id/ll_is_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/corner_login"
                android:text="@string/text_user_chat"
                android:textColor="@color/white"
                android:alpha="0.6"  />


            <Button
                android:id="@+id/btn_audio_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/corner_login"
                android:text="@string/text_user_audio_chat"
                android:textColor="@color/white"
                android:alpha="0.6"  />

            <Button
                android:id="@+id/btn_video_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/corner_login"
                android:text="@string/text_user_video_chat"
                android:textColor="@color/white"
                android:alpha="0.6"  />

        </LinearLayout>

    </LinearLayout>


</com.tangyibo.framework.view.HeadZoomScrollView>